Fix overflow issue on mobile devices

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
-/* FILEPATH: styles.css */
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 
 *{
     scroll-behavior: smooth;
     margin: 0;
     padding: 0;
+    overflow-x: hidden;
 }
 
 body{
@@ -14,8 +14,8 @@ body{
 }
 
 section{
+    width: 100%;
     box-sizing: border-box;
-    min-height: fit-content;
 }
 
 a {
